# RepoScope

./: .agentic-cursorrules  .editorconfig  .eslintrc.json  .gitignore  .pre-commit-config.yaml  API.md  BUGS.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCKER.md  FEATURES.md  ISSUE.md  LICENSE  README.md  TODO.md  commit-safe.bat  docker-compose.dev.yml  docker-compose.yml  env.example  nginx.conf  package-lock.json  package.json  test-editorconfig.js  test-vscode-format.tsx
.cursor/rules/: nextjs-rules.mdc  rules.mdc
.github/workflows/: ci.yml
External-LLM-Help/: Linter-markdown.md  Linter.md
History/: AiStory.md  CHANGELOG.md  Timeline-perplexity.md
backend/: .dockerignore  .env.example  .flake8  .pre-commit-config.yaml  API_KEYS_SETUP.md  DEVELOPMENT_GUIDE.md  Dockerfile  README.md  ai_responses_cache.json  debug_api.py  main.py  mypy.ini  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-test.txt  requirements.txt  setup_api_keys.py  simple_api_monitor.py  test_ai_responses_cache.json  test_api_connection.py  test_hot_reload.py  test_responses.json  test_security.py  test_server.py
backend/analysis_cache/: github.com_djeada_Proste-Projekty.json  github.com_johnpapa_node-hello.json  github.com_kudzik_RepoScope.json  github.com_kudzik_VibeCoding.json  github.com_octocat_Hello-World.json  github.com_test-owner_test-repo.json  github.com_typicode_jsonplaceholder.json
backend/api/: __init__.py  analysis.py  cache.py
backend/config/: __init__.py  llm_optimization.py  settings.py  test_mode.py
backend/middleware/: __init__.py  api_monitor.py  cost_optimization.py
backend/reposcope_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/schemas/: __init__.py  analysis.py  code_metrics.py  github_schemas.py
backend/scripts/: README.md  README_AI_CACHE.md  README_CACHE_USAGE.md  auto-commit-fix.py  auto-fix.py  fix-code-quality.py  manage_ai_cache.py  pre-commit-fix.ps1  pre-commit-fix.sh  quick-commit.bat  quick-fix.bat  quick-fix.ps1  quick_start_cache.py  run_cache_tests.py  run_with_cache.py  test_ai_cache.py  test_cache_integration.py
backend/services/: __init__.py  ai_client.py  analysis_service.py  code_analyzer.py  github_service.py  llm_service.py
backend/storage/: analysis_cache.py
backend/tests/: __init__.py  test_analysis_api.py  test_analysis_cache_storage.py  test_analysis_service_cache_integration.py  test_analysis_service_enhanced.py  test_cache_api_endpoints.py  test_cache_architecture_analysis.py  test_cache_component_diagnostics.py  test_cache_comprehensive.py  test_cache_comprehensive_integration.py  test_cache_debugging.py  test_cache_diagnostic.py  test_cache_fixed.py  test_cache_integration_e2e.py  test_cache_simple.py  test_cache_step_by_step.py  test_code_analyzer.py  test_code_metrics.py  test_config.py  test_cost_optimization.py  test_github_service.py  test_language_detection.py  test_language_detection_integration.py  test_llm_service.py  test_main.py
docs/: API.md  API_KEYS_SETUP.md  ARCHITECTURE.md  CHANGELOG.md  COST_OPTIMIZATION.md  DEPLOYMENT.md  DEVELOPMENT.md  PRD.md  ROADMAP.md  SECURITY.md  SECURITY_COLORS.md  TESTING_STRATEGY.md  TESTS.md
docs/adr/: 0001-template.md  README.md
frontend/: .dockerignore  .eslintrc.json  .prettierignore  Dockerfile  README.md  eslint.config.mjs  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  test-editorconfig.js  test-editorconfig.json  test-editorconfig.md  test-editorconfig.yml  test-tailwind.tsx  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: analysis-form.tsx  analysis-list.tsx  analysis-results.tsx  api-debug.tsx  error-boundary.tsx  loading-overlay.tsx  responsive-test.tsx  theme-toggle.tsx  toast-provider.tsx
frontend/src/components/analysis/: QualityMetrics.tsx
frontend/src/components/ui/: alert.tsx
frontend/src/hooks/: use-api.ts  use-network-status.ts  use-toast-api.ts
frontend/src/lib/: api-client.ts  api-types.ts  env.ts  utils.ts
